# sln-ai-services

object_recognition_service/: alembic.ini  pyproject.toml
object_recognition_service/business/: application_service.py  domain_service.py
object_recognition_service/business/managers/: image_manager.py  model_manager.py  prediction_manager.py
object_recognition_service/business/services/: image_service.py  model_service.py  prediction_service.py
object_recognition_service/contracts/image/: create_image_request.py
object_recognition_service/contracts/model/: create_model_request.py  delete_model_request.py  get_detail_model_request.py  update_model_request.py
object_recognition_service/contracts/prediction/: create_prediction_request.py  update_prediction_request.py
object_recognition_service/data/: db_session.py  repository.py  unit_of_work.py
object_recognition_service/data/entities/: __init__.py  category.py  image.py  model.py  prediction.py
object_recognition_service/data/enums/: model_enum.py
object_recognition_service/host/: container.py  main.py
object_recognition_service/host/controllers/: image_controller.py  model_controller.py  prediction_controller.py
object_recognition_service/host/request_handlers/: create_image_request_handler.py  create_model_request_handler.py  create_prediction_request_handler.py  delete_model_request_handler.py  get_detail_model_request_handler.py  update_model_request_handler.py  update_prediction_request_handler.py
object_recognition_service/migrator/: env.py
object_recognition_service/migrator/versions/: 032ba0d36a42_initial_tables.py
shared/: pyproject.toml
shared/business/: application_service_base.py  domain_service_base.py
shared/business/interfaces/: application_service.py
shared/contracts/requests/: delete_request.py  update_request.py
shared/data/: db_session_base.py  repository_base.py  unit_of_work_base.py
shared/data/interfaces/: repository.py
shared/host/: service_provider.py
shared/src/business/: application_service_base.py  domain_service_base.py
shared/src/business/interfaces/: application_service.py  domain_service.py
shared/src/data/: db_session_base.py  repository_base.py  unit_of_work_base.py
shared/src/host/: service_provider.py
shared/src/migrators/: migrator.py
(+18 files in other folders)
