[project]
name = "object_recognition_service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "dependency-injector>=4.49.1",
    "fastapi>=0.139.0",
    "psycopg2>=2.9.12",
    "python-cqrs>=4.10.3",
    "shared",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }   # Package "shared" is located in the parent directory

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
