[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ThuyVan032004", email = "dovan032004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "dependency-injector>=4.49.1",
    "pydantic>=2.13.4",
    "python-cqrs>=4.10.3",
    "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
